--- a/assets/style.css
+++ b/assets/style.css
@@ -78,3 +78,15 @@ textarea{
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
+
+.btn-light {
+  margin-bottom: 6px;
+}
+
+footer {
+  text-align: center;
+  background-color: transparent;
+  color: black;
+  border-radius: 0;
+  border-top: 10px solid black;
+}
