--- a/assets/style.css
+++ b/assets/style.css
@@ -8,11 +8,6 @@ h1 {
   font-family: 'Cabin Condensed', sans-serif;
 }
 
-h5 {
-  font-family: 'Cabin Condensed', sans-serif;
-  font-weight: 600;
-}
-
 textarea{
   background: transparent;
   border: none;
@@ -49,6 +44,9 @@ textarea{
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  font-family: 'Cabin Condensed', sans-serif;
+  font-weight: 400;
+  /* font-size: large; */
 }
 
 .past {
